force-app/main/default/objects/Credit_Transfer_Application__c/Credit_Transfer_Application__c.object-meta.xml
<CustomObject>
    <description>External institution credit transfer application.</description>
    <label>Credit Transfer Application</label>
    <nameField>
        <displayFormat>CTA-{00000}</displayFormat>
        <label>Credit Transfer Application #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Transfer Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>