force-app/main/default/objects/Credit_Transfer_Application__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <description>The academic term when the unit is taken.</description>
    <inlineHelpText>The academic term when the unit is taken.</inlineHelpText>
    <label>Academic Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>