force-app/main/default/objects/Credit_Transfer_Application__c/fields/Agreement_Unit_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Unit_Equivalent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Unit Equivalent</label>
    <referenceTo>Agreement_Unit_Equivalent__c</referenceTo>
    <relationshipLabel>Credit Transfer Applications</relationshipLabel>
    <relationshipName>Credit_Transfer_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>