force-app/main/default/objects/Credit_Transfer_Application__c/fields/Approved_Letter_Grade__c.field-meta.xml
<CustomField>
    <fullName>Approved_Letter_Grade__c</fullName>
    <description>Please ensure that the picklist values are a subset of the global value set &quot;Letter Grade.&quot;</description>
    <inlineHelpText>The letter grade to be populated in the individual enrollment or to be used for reporting purposes.</inlineHelpText>
    <label>Approved Letter Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>RPL</fullName>
            </value>
            <value>
                <fullName>Waive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>