force-app/main/default/objects/Credit_Transfer_Application__c/fields/Approved_Unit_Codes__c.field-meta.xml
<CustomField>
    <fullName>Approved_Unit_Codes__c</fullName>
    <description>The applicable one or more Unit Codes approved for the transfer credit, separated by semi-colon, e.g., UNITA;UNITB</description>
    <label>Approved Unit Code (s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>