force-app/main/default/objects/Credit_Transfer_Application__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Unit completion date</description>
    <inlineHelpText>The unit completion date</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>