force-app/main/default/objects/Credit_Transfer_Application__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact requested for transfer credit</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Transfer Applications</relationshipLabel>
    <relationshipName>Credit_Transfer_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>