force-app/main/default/objects/Credit_Transfer_Application__c/fields/Credits_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Credits_Attempted__c</fullName>
    <inlineHelpText>The credits attempted for the completed course.</inlineHelpText>
    <label>Credits Attempted</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>