force-app/main/default/objects/Credit_Transfer_Application__c/fields/Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Credits_Earned__c</fullName>
    <inlineHelpText>The credits earned for the completed course.</inlineHelpText>
    <label>Credits Earned</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>