force-app/main/default/objects/Credit_Transfer_Application__c/fields/Individual_Plan_Structure__c.field-meta.xml
<CustomField>
    <fullName>Individual_Plan_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For manual assignment: The individual plan structure that a transfer credit is assigned to.</description>
    <label>Individual Plan Structure</label>
    <referenceTo>Individual_Plan_Structure__c</referenceTo>
    <relationshipLabel>Credit Transfer Applications</relationshipLabel>
    <relationshipName>Credit_Transfer_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>