force-app/main/default/objects/Credit_Transfer_Application__c/fields/Individual_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Program Enrollment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <valueField>Individual_Program_Enrollment__c.Contact__c</valueField>
        </filterItems>
        <infoMessage>Please select an individual program enrollment for the student.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Individual_Program_Enrollment__c</referenceTo>
    <relationshipLabel>Credit Transfer Applications</relationshipLabel>
    <relationshipName>Credit_Transfer_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>