force-app/main/default/objects/Credit_Transfer_Application__c/fields/Letter_Grade__c.field-meta.xml
<CustomField>
    <fullName>Letter_Grade__c</fullName>
    <description>Letter grade received for the completed unit</description>
    <inlineHelpText>Letter grade received for the completed unit</inlineHelpText>
    <label>Letter Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>