force-app/main/default/objects/Credit_Transfer_Application__c/fields/Numerical_Grade__c.field-meta.xml
<CustomField>
    <fullName>Numerical_Grade__c</fullName>
    <description>Numerical grade received for the completed unit</description>
    <inlineHelpText>Numerical grade received for the completed unit</inlineHelpText>
    <label>Numerical Grade</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>