force-app/main/default/objects/Credit_Transfer_Application__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>Date when the credit transfer application was submitted.</description>
    <inlineHelpText>Date when the credit transfer application was submitted.</inlineHelpText>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>