force-app/main/default/objects/Credit_Transfer_Application__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date for the unit.</description>
    <inlineHelpText>Start date for the unit.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>