force-app/main/default/objects/Credit_Transfer_Application__c/fields/Transfer_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Status_Date__c</fullName>
    <description>The date of when the transfer credit is approved/rejected.</description>
    <inlineHelpText>Date when the credit transfer application is approved/rejected.</inlineHelpText>
    <label>Transfer Status Date</label>
    <type>Date</type>
</CustomField>