force-app/main/default/objects/Credit_Transfer_Application__c/validationRules/Validate_Approved_Unit_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Approved_Unit_Code</fullName>
    <active>true</active>
    <description>Approved Unit Code is required unless the Agreement Unit Equivalent is type of manual assignment.</description>
    <errorConditionFormula>AND(
ISBLANK(TEXT(Approved_Letter_Grade__c)),
NOT(ISBLANK(TEXT(Agreement_Unit_Equivalent__r.Type__c))),
NOT(ISPICKVAL(Agreement_Unit_Equivalent__r.Type__c, &apos;Manual Assignment&apos;)),
ISPICKVAL(Status__c, &apos;Approved&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Approved_Unit_Codes__c</errorDisplayField>
    <errorMessage>Approved Unit Code is required unless the Agreement Unit Equivalent is type of manual assignment.</errorMessage>
</ValidationRule>