force-app/main/default/objects/Credit_Transfer_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Unit_Equivalent__c</columns>
    <columns>Contact__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>